<resources>
    <string name="app_name">RoutineTracker</string>
    <string name="title_activity_maps">Map</string>
    <string name="welcome_message_with_logo_for_user">Welcome Message with logo for User</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="view_users">View Users</string>
    <string name="share_current_location">Share Current Location</string>
    <string name="show_current_user_s_location_history">Show Current User\'s Location History</string>
    <string name="view_today_s_locations">View Today\'s Locations</string>
    <string name="module_under_development">Module Under Development</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="new_user">New User?<u> Register Here</u></string>
    <string name="welcome">Welcome</string>
    <string name="new_user_registration">New User Registration</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="existing_user_login_here">Existing user? Login Here.</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="favourite_number_please_remember_this_since_we_use_this_for_password_recovery">Favourite Number(Please remember this, Since we use this for password recovery)</string>
    <string name="favourite_number">Favourite Number</string>
    <string name="logout">Logout</string>
</resources>