<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorRedTint"
        tools:context=".activities.MainActivity">

        <com.routinetracker.utils.views.AppTextView
            android:id="@+id/txtStartTracking"
            style="@style/DashboardButtonStyle"
            android:text="@string/start_tracking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.routinetracker.utils.views.AppTextView
            android:id="@+id/txtStopTracking"
            style="@style/DashboardButtonStyle"
            android:text="@string/stop_tracking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtStartTracking" />

        <com.routinetracker.utils.views.AppTextView
            android:id="@+id/txtViewUsers"
            style="@style/DashboardButtonStyle"
            android:text="@string/view_users"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtStopTracking" />

        <com.routinetracker.utils.views.AppTextView
            android:id="@+id/txtShowCurrentUserLocations"
            style="@style/DashboardButtonStyle"
            android:text="@string/show_current_user_s_location_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtViewUsers" />

        <com.routinetracker.utils.views.AppTextView
            android:id="@+id/txtShareCurrentLocation"
            style="@style/DashboardButtonStyle"
            android:text="@string/share_current_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtShowCurrentUserLocations" />

        <com.routinetracker.utils.views.AppTextView
            android:id="@+id/txtViewTodaysLocations"
            style="@style/DashboardButtonStyle"
            android:text="@string/view_today_s_locations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtShareCurrentLocation" />

        <com.routinetracker.utils.views.AppTextView
            android:id="@+id/txtLogout"
            style="@style/DashboardButtonStyle"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtViewTodaysLocations" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
