<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="@dimen/fifteen_dp"
            tools:context=".activities.LoginActivity">

            <com.routinetracker.utils.views.AppTextView
                android:id="@+id/txtHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp"
                android:text="@string/new_user_registration"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/fifteen_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.routinetracker.utils.views.AppEditText
                android:id="@+id/edtName"
                style="@style/GeneralEditText"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtHeading" />

            <com.routinetracker.utils.views.AppEditText
                android:id="@+id/edtEmailAddress"
                style="@style/GeneralEditText"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtName" />

            <com.routinetracker.utils.views.AppEditText
                android:id="@+id/edtPassword"
                style="@style/GeneralEditText"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtEmailAddress" />

            <com.routinetracker.utils.views.AppEditText
                android:id="@+id/edtConfirmPassword"
                style="@style/GeneralEditText"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtPassword" />

            <com.routinetracker.utils.views.AppTextView
                android:id="@+id/txtFavHint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fifteen_dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_marginEnd="@dimen/fifteen_dp"
                android:text="@string/favourite_number_please_remember_this_since_we_use_this_for_password_recovery"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/thirteen_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword" />

            <com.routinetracker.utils.views.AppEditText
                android:id="@+id/edtFavNumber"
                style="@style/GeneralEditText"
                android:layout_marginTop="@dimen/one_dp"
                android:hint="@string/favourite_number"
                android:inputType="number"
                android:maxLength="3"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtFavHint" />

            <com.routinetracker.utils.views.AppTextView
                android:id="@+id/txtDOB"
                style="@style/GeneralEditText"
                android:editable="false"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:hint="@string/date_of_birth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtFavNumber" />

            <com.routinetracker.utils.views.AppTextView
                android:id="@+id/txtRegister"
                style="@style/NormalButtonStyle"
                android:layout_marginTop="@dimen/twenty_dp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDOB" />

            <com.routinetracker.utils.views.AppTextView
                android:id="@+id/txtExistingUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_dp"
                android:padding="@dimen/ten_dp"
                android:text="@string/existing_user_login_here"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/fifteen_sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtRegister" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>